--- a/Java/0316.md
+++ b/Java/0316.md
@@ -1,3 +1,23 @@
-# Hi it's just test
-## yeah
-### yeahhh
+# 0316 Java
+
+# refactoring
+기존의 코드 기능은 유지하면서 내부 구조를 개선하여 가독성을 높이고, 유지보수를 용이하게 하는 과정이다.
+
+쉽게 이야기해서 작동하는 기능은 똑같은데 코드를 개선하는 것.
+<br><br>
+# 배열생성과 초기화
+```java
+int[] students = new int[]{90,80,70,60,50}; // 배열 생성과 초기화
+```
+```java
+int[] students = {90,80,70,60,50}; // 간략화할 수도 있다.
+```
+<br>
+
+# .length
+
+배열의 길이를 반환 
+```java
+int[] students = new int[5];
+System.out.println(students.length);  //출력 결과 : 5
+```
