--- a/Java/0316.md
+++ b/Java/0316.md
@@ -1,5 +1,13 @@
 # 0316 Java
 
+- [0316 Java](#0316-java)
+- [refactoring](#refactoring)
+- [배열생성과 초기화](#배열생성과-초기화)
+- [지역변수](#지역변수)
+- [scope](#scope)
+- [.length](#length)
+
+<br><br><br><br><br>
 # refactoring
 기존의 코드 기능은 유지하면서 내부 구조를 개선하여 가독성을 높이고, 유지보수를 용이하게 하는 과정이다.
 
@@ -14,6 +22,53 @@ int[] students = {90,80,70,60,50}; // 간략화할 수도 있다.
 ```
 <br>
 
+# 지역변수
+지연변수는 이름 그대로 특정 지역에서만 사용할 수 있는 변수.<br>
+자신이 선언된 코드블록 안에서만 생존하고,벗어나면 제거된다.<br> 따라서 이후에는 접근할 수 없다.
+<br>
+
+```java
+public class Scope1 {
+    public static void main(String[] args){
+        int a = 10; // a 생존 시작
+        if(true) {
+            int b = 20; // b 생존 시작
+            System.out.println("a = "+ a);
+            System.out.println("b = "+ b);
+        } //b 생존 종료
+
+        //System.out.println("b = "+b); //이후 b에 접근 불가.
+        System.out.println("a = "+ a);
+    }// a 생존 종료
+}
+```
+<br><br>
+
+# scope
+```java
+public static void main(String[] args){
+    int a = 10;
+    int tmp = 0;
+    if(a>0){
+        temp = a*2;
+        System.out.println("temp =" + temp);
+    }
+    System.out.println("a = " + a);
+}
+```
+위 코드는 조건이 맞으면 `a`의 값을 2배 증가해 출력하는 코드이다.<br>
+2배값을 저장하기 위해 임시변수 `tmp`를 사용했다. 그런데 임시 변수 `tmp`가 `main()`블록에 선언되어 있다. 이렇게 되면 아래와 같은 문제가 발생한다.
+
+- **비효율적인 메모리 사용**: `tmp`는 `if`블록에서만 필요하지만, 위 코드는 `main()`블록이 끝날 때까지 메모리가 유지되므로 불필요한 메모리 낭비가 발생한다. 만약 `if`블럭안에서 `tmp`를 선언했다면 `if`블럭 종료시점에 `tmp`를 메모리에서 제거하여 더 효율적으로 메모리를 사용할 수 있다. <br><br>
+
+- **코드 복잡성 증가** : `tmp`는 `if`블록에서만 쓰이면 되는데 스코프가 불필요하게 넓다. 이런 경우 코드를 유지보수 할 때 `a`는 물론이고 `tmp`도 계속 신경써야한다. 예시 코드는 단순하지만 실무에서는 코드가 복잡한 경우가 많다.<br><br>
+
+**변수는 꼭 필요한 범위로 한정해서 생성하자<br>
+메모리를 효율적으로 사용하고 유지보수를 용이하게 만들어준다<br>
+좋은 프로그램은 무한한 자유가 아닌 적절한 제약이 필요하다**<br>
+
+ <br>
+ 
 # .length
 
 배열의 길이를 반환 
