--- a/Java/0316.md
+++ b/Java/0316.md
@@ -1,11 +1,13 @@
-# 0316 Java
+0316 Java
 
-- [0316 Java](#0316-java)
+
 - [refactoring](#refactoring)
 - [배열생성과 초기화](#배열생성과-초기화)
 - [지역변수](#지역변수)
 - [scope](#scope)
 - [.length](#length)
+
+
 
 <br><br><br><br><br>
 # refactoring
