--- a/Java/0320.md
+++ b/Java/0320.md
@@ -1,7 +1,7 @@
 0320 java
 
 - [indexOf()](#indexof)
-
+- [trim()](#trim)
 
 
 # indexOf()
@@ -22,3 +22,10 @@ else
 
     // 실행결과 : 토큰을 찾았습니다. index : 6
 ```
+
+# trim() 
+
+`trim()` 메서드는 문자열의 시작과 끝의 공백을 제거하는 문자열 메서드이다.<br>
+여기서 공백은 스페이스,탭(\t),개행(\n)과 같은 공백문자를 의미한다.<br>
+trim()메서드를 호출하면 원본 문자열에서 시작과 끝에 있는 공백을 제거한다.<br>
+예를 들어, `" Hello, World! "`와 같은 문자열에 `trim()` 메서드를 적용하면 `"Hello, World!`"가 반환된다.
