--- a/Java/0325.md
+++ b/Java/0325.md
@@ -1,1 +1,10 @@
+0325 java
 
+[이차원배열 생성](#이차원배열-생성)
+
+<br><br><br>
+# 이차원배열 생성
+```java
+int[][] a = new int[5][6];
+char[][] b = new char[5]; // 이런 식으로 행만 적고 열은 나중에 생성할 수 있다.
+``
